# Argon

./: .gitignore  .travis.yml  README.md
sources/: CMakeLists.txt
sources/data_structures/: CMakeLists.txt  slot_map.hpp
sources/data_structures/include/data_structures/: forward_declarations.hpp  slot_map.hpp  sparse_storage.hpp  standard_containers.hpp
sources/data_structures/src/: sparse_storage.cpp
sources/engine/core_types/: CMakeLists.txt
sources/engine/engine_core/: CMakeLists.txt  main.cpp
sources/engine_core/: CMakeLists.txt  component.cpp  component.hpp  core.cpp  core.hpp  core_singleton.hpp  forward_declarations.hpp  system.cpp  system.hpp  system_manager.cpp  system_manager.hpp  time.cpp  time.hpp
sources/engine_core/include/engine_core/: component.hpp  core.hpp  ecs_traits.hpp  engine.hpp  engine_state.hpp  entity.hpp  entity_manager.hpp  filesystem.hpp  forward_declarations.hpp  group.hpp  reflection.hpp  service.hpp  space.hpp  system.hpp  system_manager.hpp  time.hpp
sources/engine_core/private/private/: construction_data_impl.hpp  entity_manager_data_provider.hpp  service_manager.hpp  storage_manager.hpp  system_manager_data_provider.hpp
sources/engine_core/private/private/plugin/: plugin_manager.hpp
sources/engine_core/src/: component.cpp  core.cpp  engine.cpp  engine_state.cpp  entity.cpp  entity_manager.cpp  filesystem.cpp  service.cpp  space.cpp  system.cpp  system_manager.cpp  time.cpp
sources/engine_core/src/private/: entity_manager_data_provider.cpp  system_manager_data_provider.cpp
sources/engine_core/src/private/plugin/: plugin_manager.cpp
sources/fundamental/: CMakeLists.txt  compiler_macros.hpp  debug.hpp  helper_macros.hpp  non_copyable.hpp  types.hpp
sources/fundamental/include/fundamental/: compiler_macros.hpp  debug.hpp  helper_macros.hpp  non_copyable.hpp  type_traits.hpp  types.hpp
sources/game_launcher/: CMakeLists.txt  main.cpp
sources/math/: CMakeLists.txt  constants.hpp  matrix3.cpp  matrix3.hpp  matrix4.cpp  matrix4.hpp  quaternion.cpp  quaternion.hpp  utils.cpp  utils.hpp  vector2.cpp  vector2.hpp  vector3.cpp  vector3.hpp  vector4.cpp  vector4.hpp
sources/math/include/math/: constants.hpp  forward_declarations.hpp  matrix3.hpp  matrix4.hpp  quaternion.hpp  simd.hpp  utils.hpp  vector2.hpp  vector3.hpp  vector4.hpp
sources/math/src/: matrix3.cpp  matrix4.cpp  quaternion.cpp  utils.cpp  vector2.cpp  vector3.cpp  vector4.cpp
sources/plugins/plugin_test/: CMakeLists.txt  plugin.cpp  plugin.hpp
sources/render/: CMakeLists.txt  shader_loader.cpp  shader_loader.hpp  simple_app.cpp  simple_app.hpp
sources/render/include/render/: shader_loader.hpp  simple_app.hpp
sources/render/src/: shader_loader.cpp  simple_app.cpp
sources/unit_testing/data_structures_test/: CMakeLists.txt  slot_map_test.cpp  sparse_storage_test.cpp
sources/unit_testing/test_launcher/: CMakeLists.txt  main.cpp
